Finished first draft of verification and testing.

--- a/report/GrantFleming-4thYearProject-Report.tex
+++ b/report/GrantFleming-4thYearProject-Report.tex
@@ -25,6 +25,7 @@
 	\input{chapters/ProjectPlan.tex}
 	\input{chapters/ALanguageForDescribingTypeSystems.tex}
         \input{chapters/BuildingATypeCheckerGenerator.tex}
+        \input{chapters/TestingVerification.tex}        
         \input{chapters/Discussion.tex}
 	
 	\input{appendices.tex}
