--- a/report/appendices.tex
+++ b/report/appendices.tex
@@ -494,4 +494,20 @@ squarebracketed p = do
   where open parsermonad
   open Parsers
 \end{verbatim}
+
+\section{A selection of testing code}
+\label{appendix-tests}
+
+\subsection{Description of STLC}
+\input{../../TypeCheckerGenerator/latex/Test/Specs/STLC.tex}
+
+\subsection{Beta reduction and normalisation}
+\input{../../TypeCheckerGenerator/latex/Test/BetaTest.tex}
+
+\subsection{Eta expansion}
+\input{../../TypeCheckerGenerator/latex/Test/EtaTest.tex}
+
+\subsection{Type checking STLC}
+\input{../../TypeCheckerGenerator/latex/Test/STLCTest.tex}
+
 \end{appendices}
