--- a/TypeCheckerGenerator/latex/Test/EtaTest.tex
+++ b/TypeCheckerGenerator/latex/Test/EtaTest.tex
@@ -1,78 +1,242 @@
-module Test.EtaTest where
-
-open import Test.Specs.STLC using (etarules; lam-ηrule; betarules; rules)
-open Test.Specs.STLC.combinators
-open import CoreLanguage
-open import Pattern
-open import Relation.Binary.PropositionalEquality using (_≡_; refl)
-open import EtaRule
-open import Data.Maybe using (Maybe; just; nothing)
-open η-Rule
-open import Thinning using (_^term)
-open import Failable
-open import Data.List using ([])
-
-
----------------------------------------------
--- Test 1:
--- η expanding λx.a = λy.(λx.a y)
----------------------------------------------
-
-test1 : Const 0
-test1 = lam a
-
-test1type : Const 0
-test1type = α ⇨ α
-
-_ : η-match lam-ηrule test1type ≡ just ((thing α) ∙ (` ∙ (thing α)))
-_ = refl
-
-_ : η-expand lam-ηrule test1type test1 ≡ lam (thunk (elim ((test1 ^term) ∷ (test1type ^term)) (~ ze)))
-_ = refl
-
-
---------------------------------------------------
--- Test 2:
--- η expanding ((λx.λy.x) b) = λy.(((λx.λy.x) b) y)
----------------------------------------------------
-
-test2 : Const 0
-test2 = thunk (elim (lam (lam (~ (su ze))) ∷ (β ⇨ α ⇨ β)) b)
-
-test2type : Const 0
-test2type = α ⇨ β
-
-_ : η-match lam-ηrule test2type ≡ just ((thing α) ∙ (` ∙ (thing β)))
-_ = refl
-
-_ : η-expand lam-ηrule test2type test2 ≡ lam (thunk (elim ((test2 ^term) ∷ (test2type ^term)) (~ ze)))
-_ = refl
-
---------------------------------------------------
--- Test 3:
--- expand where the rule exists
----------------------------------------------------
-
-test3 : Const 0
-test3 = thunk (elim (lam (lam (~ (su ze))) ∷ (β ⇨ α ⇨ β)) b)
-
-test3type : Const 0
-test3type = α ⇨ β
-
-_ : expand etarules test3 test3type ≡ succeed (lam (thunk (elim ((test3 ^term) ∷ (test3type ^term)) (~ ze))))
-_ = refl
-
---------------------------------------------------
--- Test 4:
--- expand where no rule exists
----------------------------------------------------
-
-test4 : Const 0
-test4 = thunk (elim (lam (lam (~ (su ze))) ∷ (β ⇨ α ⇨ β)) b)
-
-test4type : Const 0
-test4type = α ⇨ β
-
-_ : expand [] test4 test4type ≡ fail "no η-rule match for: α→β"
-_ = refl
-
+\hide{
+\begin{code}%
+\>[0]\AgdaKeyword{module}\AgdaSpace{}%
+\AgdaModule{Test.EtaTest}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Test.Specs.STLC}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{etarules}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{lam-ηrule}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{betarules}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{rules}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{Test.Specs.STLC.combinators}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{CoreLanguage}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Pattern}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Relation.Binary.PropositionalEquality}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}≡\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{EtaRule}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Maybe}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{Maybe}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{just}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{nothing}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{η-Rule}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Thinning}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}term}}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Failable}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.List}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{[]}\AgdaSymbol{)}\<%
+\end{code}
+}
+\begin{code}%
+\>[0]\AgdaComment{---------------------------------------------}\<%
+\\
+\>[0]\AgdaComment{-- Test 1:}\<%
+\\
+\>[0]\AgdaComment{-- η expanding λx.a = λy.(λx.a y)}\<%
+\\
+\>[0]\AgdaComment{---------------------------------------------}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{test1}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaNumber{0}\<%
+\\
+\>[0]\AgdaFunction{test1}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{lam}\AgdaSpace{}%
+\AgdaFunction{a}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{test1type}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaNumber{0}\<%
+\\
+\>[0]\AgdaFunction{test1type}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{α}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇨}}\AgdaSpace{}%
+\AgdaFunction{α}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{η-match}\AgdaSpace{}%
+\AgdaFunction{lam-ηrule}\AgdaSpace{}%
+\AgdaFunction{test1type}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
+\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaInductiveConstructor{thing}\AgdaSpace{}%
+\AgdaFunction{α}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thing}\AgdaSpace{}%
+\AgdaFunction{α}\AgdaSymbol{)))}\<%
+\\
+\>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{η-expand}\AgdaSpace{}%
+\AgdaFunction{lam-ηrule}\AgdaSpace{}%
+\AgdaFunction{test1type}\AgdaSpace{}%
+\AgdaFunction{test1}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
+\AgdaFunction{lam}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaFunction{test1}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\textasciicircum{}term}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{test1type}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\textasciicircum{}term}}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{\textasciitilde{}}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}\AgdaSymbol{)))}\<%
+\\
+\>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaComment{--------------------------------------------------}\<%
+\\
+\>[0]\AgdaComment{-- Test 2:}\<%
+\\
+\>[0]\AgdaComment{-- η expanding ((λx.λy.x) b) = λy.(((λx.λy.x) b) y)}\<%
+\\
+\>[0]\AgdaComment{---------------------------------------------------}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{test2}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaNumber{0}\<%
+\\
+\>[0]\AgdaFunction{test2}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{lam}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{lam}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{\textasciitilde{}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{su}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}\AgdaSymbol{)))}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{β}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇨}}\AgdaSpace{}%
+\AgdaFunction{α}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇨}}\AgdaSpace{}%
+\AgdaFunction{β}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaFunction{b}\AgdaSymbol{)}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{test2type}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{Const}\AgdaSpace{}%
+\AgdaNumber{0}\<%
+\\
+\>[0]\AgdaFunction{test2type}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaFunction{α}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⇨}}\AgdaSpace{}%
+\AgdaFunction{β}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{η-match}\AgdaSpace{}%
+\AgdaFunction{lam-ηrule}\AgdaSpace{}%
+\AgdaFunction{test2type}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
+\AgdaInductiveConstructor{succeed}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaInductiveConstructor{thing}\AgdaSpace{}%
+\AgdaFunction{α}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thing}\AgdaSpace{}%
+\AgdaFunction{β}\AgdaSymbol{)))}\<%
+\\
+\>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{η-expand}\AgdaSpace{}%
+\AgdaFunction{lam-ηrule}\AgdaSpace{}%
+\AgdaFunction{test2type}\AgdaSpace{}%
+\AgdaFunction{test2}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
+\AgdaFunction{lam}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{↞↞}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{test2}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\textasciicircum{}term}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{test2type}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{\textasciicircum{}term}}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{\textasciitilde{}}\AgdaSpace{}%
+\AgdaInductiveConstructor{ze}\AgdaSymbol{)))}\<%
+\\
+\>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\<%
+\\
+\>[0]\<%
+\end{code}
