Revert "Finished section on type checker" wish me luck ...
This reverts commit f55d28c62592efada0decd875294ef096fac1870.

--- a/TypeCheckerGenerator/latex/Semantics.tex
+++ b/TypeCheckerGenerator/latex/Semantics.tex
@@ -417,7 +417,9 @@ a context.
 \begin{code}%
 \>[0]\AgdaFunction{PremsChecker}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[16]\AgdaSymbol{∀\{}\AgdaBound{δ}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[16]\AgdaSymbol{(}\AgdaBound{δ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Context}\AgdaSpace{}%
 \AgdaBound{δ}%
@@ -470,11 +472,11 @@ we need) before finally making a call to reduce with this information.
 \begin{code}%
 \>[0]\AgdaFunction{findRule}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[260I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[262I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[260I]%
+\>[.][@{}l@{}]\<[262I]%
 \>[11]\AgdaSymbol{(}\AgdaBound{tar}\AgdaSpace{}%
 \AgdaBound{type}\AgdaSpace{}%
 \AgdaBound{elim}\AgdaSpace{}%
@@ -503,10 +505,10 @@ we need) before finally making a call to reduce with this information.
 \AgdaBound{e}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{fail}%
-\>[282I]\AgdaSymbol{(}\AgdaString{"No matching β-rule found for "}\AgdaSpace{}%
+\>[284I]\AgdaSymbol{(}\AgdaString{"No matching β-rule found for "}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\<%
 \\
-\>[282I][@{}l@{\AgdaIndent{0}}]%
+\>[284I][@{}l@{\AgdaIndent{0}}]%
 \>[27]\AgdaFunction{print}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{++}}\AgdaSpace{}%
@@ -560,11 +562,11 @@ we need) before finally making a call to reduce with this information.
 \begin{code}%
 \>[0]\AgdaFunction{reduce}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[321I]\AgdaDatatype{List}\AgdaSpace{}%
+\>[323I]\AgdaDatatype{List}\AgdaSpace{}%
 \AgdaRecord{β-rule}%
 \>[23]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[321I]%
+\>[.][@{}l@{}]\<[323I]%
 \>[9]\AgdaFunction{PremsChecker'}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
@@ -593,9 +595,9 @@ we need) before finally making a call to reduce with this information.
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[338I]\AgdaKeyword{do}\<%
+\>[340I]\AgdaKeyword{do}\<%
 \\
-\>[338I][@{}l@{\AgdaIndent{0}}]%
+\>[340I][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaSymbol{(}\AgdaBound{rule}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
@@ -632,7 +634,7 @@ we need) before finally making a call to reduce with this information.
 \AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{p'env}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[338I]%
+\>[.][@{}l@{}]\<[340I]%
 \>[4]\AgdaKeyword{where}\AgdaSpace{}%
 \AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{ElimRule}\<%
@@ -730,7 +732,7 @@ results. The responsibility of type-checking the term falls to the caller.
 }
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}-\AgdaUnderscore{}∥\AgdaUnderscore{}∥}}%
-\>[392I]\AgdaSymbol{:}%
+\>[394I]\AgdaSymbol{:}%
 \>[10]\AgdaFunction{Reducer}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{×}}\AgdaSpace{}%
 \AgdaFunction{Inferer}\AgdaSpace{}%
@@ -738,7 +740,7 @@ results. The responsibility of type-checking the term falls to the caller.
 \AgdaFunction{PremsChecker}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[392I][@{}l@{\AgdaIndent{0}}]%
+\>[394I][@{}l@{\AgdaIndent{0}}]%
 \>[9]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
@@ -829,6 +831,7 @@ results. The responsibility of type-checking the term falls to the caller.
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaBound{rd}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{pc}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
@@ -1028,7 +1031,7 @@ of this early on and maintain it than it is to build such a proof at the "leaf".
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{i}\AgdaSymbol{)}%
 \>[23]\AgdaSymbol{=}%
-\>[583I]\AgdaKeyword{let}\AgdaSpace{}%
+\>[586I]\AgdaKeyword{let}\AgdaSpace{}%
 \AgdaBound{elms}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{eliminations}\AgdaSpace{}%
@@ -1037,7 +1040,7 @@ of this early on and maintain it than it is to build such a proof at the "leaf".
 \AgdaBound{v}\AgdaSpace{}%
 \AgdaKeyword{in}\<%
 \\
-\>[583I][@{}l@{\AgdaIndent{0}}]%
+\>[586I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaFunction{helper}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
@@ -1062,14 +1065,14 @@ of this early on and maintain it than it is to build such a proof at the "leaf".
 %
 \>[4]\AgdaFunction{helper}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[605I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[608I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{γ'}\AgdaSymbol{\}(}\AgdaBound{q}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Pattern}\AgdaSpace{}%
 \AgdaBound{γ'}\AgdaSymbol{)}%
 \>[58]\AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[605I]%
+\>[.][@{}l@{}]\<[608I]%
 \>[13]\AgdaSymbol{((}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗}}\AgdaSpace{}%
 \AgdaField{input}\AgdaSpace{}%
@@ -1198,9 +1201,9 @@ of this early on and maintain it than it is to build such a proof at the "leaf".
 \>[4][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{qt}%
-\>[695I]\AgdaBound{rs}\<%
+\>[698I]\AgdaBound{rs}\<%
 \\
-\>[.][@{}l@{}]\<[695I]%
+\>[.][@{}l@{}]\<[698I]%
 \>[11]\AgdaSymbol{(}\AgdaFunction{typeOf}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{checkRule}\AgdaSpace{}%
 \AgdaBound{r}\AgdaSymbol{)}\AgdaSpace{}%
