Finished section on evaluation.

--- a/report/GrantFleming-4thYearProject-Report.tex
+++ b/report/GrantFleming-4thYearProject-Report.tex
@@ -25,8 +25,9 @@
 	\input{chapters/ProjectPlan.tex}
 	\input{chapters/ALanguageForDescribingTypeSystems.tex}
         \input{chapters/BuildingATypeCheckerGenerator.tex}
-        \input{chapters/TestingVerification.tex}        
-        \input{chapters/Discussion.tex}
+        \input{chapters/TestingVerification.tex}
+        \input{chapters/Evaluation.tex}
+        \input{chapters/SummaryConclusion.tex}
 	
 	\input{appendices.tex}
 	
