FIRST DRAFT COMPLETE

--- a/TypeCheckerGenerator/latex/Opening.tex
+++ b/TypeCheckerGenerator/latex/Opening.tex
@@ -42,7 +42,7 @@ For thinnings, this is accomplished by prepending the identity thinning
 length $γ$ to the original thinning so that for some $δ ⊑ δ'$ the resulting
 thinning is of type $(γ + δ) ⊑ (γ + δ')$. If some entity scoped in $δ$ has an
 action of a thinning defined for it, opening it by $γ$ may be defined as the
-action of the thinning $γ ◃ δ$. \hl{maybe go back and highlight this}
+action of the thinning $γ ◃ δ$.
 
 We provide the following definition to construct types that describe openings.
 
