--- a/TypeCheckerGenerator/latex/Thinning.tex
+++ b/TypeCheckerGenerator/latex/Thinning.tex
@@ -186,14 +186,15 @@
 }
 
 A key concept that will be used throughout this implementation is that
-of a Thinning. Thinnings describe embeddings between scopes and are
+of a thinning. Thinnings describe embeddings between scopes and are
 denoted $δ ⊑ γ$ where they are embed some scope $δ$ into another
 scope $γ$ and as such it must be that $δ \leq γ$.
 
-Thinnings can be represented as bit-vectors $γ$ digits long where each
-digit identifies what is 'new' in $γ$, or alternatively, for things scoped
-in $γ$, which of them existed in $δ$. Our implementation follows this
-intuition and also enforces the $δ \leq γ$ invariant by construction.
+Some thinning $δ ⊑ γ$ can be represented a a bit-vector $γ$ digits long where
+each digit identifies what is 'new' in $γ$. A thinning may also be interpreted
+as a selection from some scope $γ$, and we may use singleton thinnings in order
+to represent variables in this way. Our implementation maintains the $δ \leq γ$
+invariant by construction and is shown here.
 
 \begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
@@ -450,10 +451,7 @@ to a concatenation in both directions. Their type signatures are as follows.
 \AgdaOperator{\AgdaInductiveConstructor{I}}\<%
 \end{code}
 }
-
-We can decide equality of thinnings and so we leverage the standard library
-to help us provide this functionality.
-
+\hide{
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≟\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -551,7 +549,7 @@ to help us provide this functionality.
 \AgdaBound{p}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\AgdaSymbol{\})}\<%
 \end{code}
-
+}
 \hide{
 \begin{code}%
 \>[0]\AgdaFunction{++-identityʳ}\AgdaSpace{}%
@@ -592,12 +590,10 @@ to help us provide this functionality.
 \AgdaBound{θ}\AgdaSymbol{)}\<%
 \end{code}
 }
-
-It is also worth noting here that all variables can be represented as
-singleton thinnings where the thinning identifies the selection of a
-variable from the scope.
-
+\hide{
 \begin{code}%
+\>[0]\AgdaComment{-- Variables can be represented as singleton thinnings.}\<%
+\\
 \>[0]\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧var}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Var}\AgdaSpace{}%
@@ -626,6 +622,7 @@ variable from the scope.
 \AgdaOperator{\AgdaFunction{⟧var}}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{O}}\<%
 \end{code}
+}
 
 There are various scoped entities on which it makes sense for thinnings
 to act by lifting the entity into a wider scope. To capture this commonly
@@ -685,10 +682,9 @@ somehow narrow the scope.
 
 There are many scoped entities that we will wish a thinning to act on,
 and so we adopt the convention that all functions detailing an action
-of thinnings take the form $⟨\mbox{some-entity}}$ with the exception of the
+of thinnings take the form begin with "⟨" with the exception of the
 action of a thinning on another thinning which equates to composition
-and so we use the more traditional $∘$ notation. We detail various
-thinning actions here that we will use later.
+and so we use the more traditional $∘$ notation.
 
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}∘\AgdaUnderscore{}}}%
@@ -707,7 +703,10 @@ thinning actions here that we will use later.
 \AgdaFunction{Thinnable}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
 \AgdaGeneralizable{d}\AgdaSymbol{)}\<%
-\\
+\end{code}
+
+\hide{
+\begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⟨var⊗\AgdaUnderscore{}}}%
 \>[10]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Thinnable}\AgdaSpace{}%
@@ -741,10 +740,9 @@ thinning actions here that we will use later.
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
 \AgdaGeneralizable{T}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\end{code}
-
-\hide{
-\begin{code}%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaInductiveConstructor{ε}%
 \>[6]\AgdaOperator{\AgdaFunction{∘}}%
 \>[9]\AgdaInductiveConstructor{ε}%
@@ -1092,8 +1090,8 @@ sense, for instance in using a thinning to select elements from a vector.
 
 A weakening is a special case of a thinning where the scope is extended by
 one at its most local position, for instance when passing under a binder.
-This concept is captured here, as well as the relavent type that detailing
-the action of a weakening. A function is provided to weaken anything Thinnable.
+This concept is captured here, as well as the relavent type that details
+the action of a weakening.
 
 \begin{code}%
 \>[0]\AgdaFunction{↑}\AgdaSpace{}%
@@ -1140,7 +1138,6 @@ the action of a weakening. A function is provided to weaken anything Thinnable.
 \AgdaGeneralizable{T}\<%
 \\
 \>[0]\AgdaFunction{weaken}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{T}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{⟨}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1149,10 +1146,9 @@ the action of a weakening. A function is provided to weaken anything Thinnable.
 \AgdaFunction{↑}\<%
 \end{code}
 
-When providing Weakenables, we adopt the naming convention of \^̂some-entity.
+When providing Weakenables, we adopt the naming convention of beginning their
+identifers with "\^̂".
 
-As a consequence of being able to easily weaken Thinnable entities, Weakenable
-implementations are often trivial. The types of some commonly used weakenings are detailed here.
 
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}}}%
@@ -1171,6 +1167,11 @@ implementations are often trivial. The types of some commonly used weakenings ar
 \AgdaFunction{Weakenable}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{Term}\AgdaSpace{}%
 \AgdaGeneralizable{d}\AgdaSymbol{)}\<%
+\end{code}
+
+\hide{
+\begin{code}%
+\>[0]\AgdaComment{-- a substitution is weakenable if the think it substitutes is}\<%
 \\
 \>[0]\AgdaFunction{\textasciicircum{}sub}%
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
@@ -1182,10 +1183,9 @@ implementations are often trivial. The types of some commonly used weakenings ar
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
 \AgdaGeneralizable{T}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
-\end{code}
-
-\hide{
-\begin{code}%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaComment{-- so for a start we can weaken thinnings themselves}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}\textasciicircum{}}}\AgdaSpace{}%
